...
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OE6-nf-Mud">
                                <rect key="frame" x="167" y="227" width="79" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="98T-cG-wHv"/>
                                </constraints>
                                <state key="normal" title="Fire event 1"/>
                                <connections>
                                    <action selector="event1Tapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="0ov-tD-VI6"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cvx-up-FYt">
                                <rect key="frame" x="166" y="266" width="81" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="LX5-gz-d7W"/>
                                </constraints>
                                <state key="normal" title="Fire event 2"/>
                                <connections>
                                    <action selector="event2Tapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="HVY-hb-c0n"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TdL-xB-hhV">
                                <rect key="frame" x="166" y="306" width="81" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="N20-dJ-6VP"/>
                                </constraints>
                                <state key="normal" title="Fire event 3"/>
                                <connections>
                                    <action selector="event3Tapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="fMO-Cc-rT2"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Press the dark blue circle to expand the tool." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jCB-5
                                <rect key="frame" x="39" y="85" width="334" height="46"/>
...
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BsO-WX-CuN">
                                <rect key="frame" x="157" y="459" width="100" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="GVC-9t-OtN"/>
                                </constraints>
                                <state key="normal" title="UI test helpers"/>
                                <connections>
                                    <segue destination="KMA-XH-km6" kind="show" id="rir-8U-aRw"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9rK-o1-gNd">
                                <rect key="frame" x="110" y="143" width="195" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="bwF-tX-ks3"/>
                                </constraints>
                                <state key="normal" title="Clear saved button locations"/>
                                <connections>
                                    <action selector="clearDefaults" destination="KMA-XH-km6" eventType="touchUpInside" id="sGv-KU-C3V"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gMa-e5-NkC">
                                <rect key="frame" x="99.666666666666686" y="69" width="215" height="46"/>
...
