...
    // MARK: - Private Properties
    
    private lazy var loggerButton: TraceUIButton = { [unowned self] in
        let button = TraceUIButton(backgroundColor: .white, tapped: {
            TraceUISignals.UI.showLogger.fire(data: nil)
        })
        button.setTitle("Logger", for: .normal)
        button.setTitleColor(UIColor.TraceUI.blueGray, for: .normal)
        button.titleLabel?.font = boldFont
        return button
    }()
    
    private lazy var tracesButton: TraceUIButton = { [unowned self] in
        let button = TraceUIButton(backgroundColor: UIColor.TraceUI.lightGray, tapped: {
            TraceUISignals.UI.showTraces.fire(data: nil)
        })
        button.setTitle("Start a trace", for: .normal)
        button.setTitleColor(UIColor.TraceUI.blueGray, for: .normal)
        button.titleLabel?.font = font
        return button
    }()
    
    private let font = UIFont.systemFont(ofSize: 14)
...
