...
    // MARK: - Private Properties
    
    private lazy var startTraceButton: TraceUIIconButton = {
        let button = TraceUIIconButton(icon: .inBundle(named: "StartTraceIcon"), backgroundColor: .clear, tapped: {
            TraceUISignals.UI.startTrace.fire(data: nil)
        })
        button.accessibilityLabel = "StartTrace"
        return button
    }()
    
    private lazy var stopTraceButton: TraceUIIconButton = {
        let button = TraceUIIconButton(icon: .inBundle(named: "StopTraceIcon"), backgroundColor: .clear, tapped: {
            TraceUISignals.UI.stopTrace.fire(data: nil)
        })
        button.accessibilityLabel = "StopTrace"
        button.alpha = 0
        return button
    }()
    
    private lazy var traceNameLabel: UILabel = { [unowned self] in
        let label = UILabel(frame: .zero)
...
